# gaeme-of-life-wasm

./: Cargo.toml  index.html  network_work_groups.js
src/: lib.rs
src/gaeme_of_life/: board.rs  cell.rs
